...
class SearchFieldWidget extends ConsumerWidget {
  const SearchFieldWidget({super.key});
  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final controller = ref.watch(searchTextFieldControllerProvider);
    return TextFormField(
      key:const Key('SearchTextFormField'),
      controller: controller,
      autofocus: true,
      onFieldSubmitted: (txt) {
        //PLAN:入力履歴はローカル・クラウド両方に保存しておく
        //プロバイダーにテキストを送信して処理をする
        final req = SearchRequest(searchType: SearchType.addContent, word: txt);
...
